# thruster

./: .travis.yml  Cargo.toml  README.md  basic_scn.ron  cfg.ron
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
benches/: rt_perf_bench.rs
src/: acceleration.rs  algebra.rs  app.rs  bvh.rs  bxdf.rs  camera.rs  core.rs  denoise.rs  dither.rs  geometry.rs  key_state.rs  lib.rs  light.rs  lightsource.rs  logger.rs  main.rs  make_world.rs  material.rs  parser.rs  profiler.rs  render_config.rs  sampler.rs  scene.rs  shape.rs  shape.rs_old  skybox.rs  support.rs  texture_map.rs  thruster.rs  utils.rs
src/acceleration/: bounds.rs  bvh.rs  queue_systems.rs
src/algebra/: bounds.rs  combinators.rs  intersection.rs  matrix.rs  normal.rs  pixel.rs  points.rs  prelude.rs  ray.rs  transform.rs  vectors.rs
src/bxdf/: bsdf.rs
src/core/: aggregate.rs  camera.rs  image.rs  interaction.rs  intersection.rs  material.rs  medium.rs  primitive.rs  renderer.rs  scene.rs  spectrum.rs  surface_interaction.rs  texture.rs  transport.rs
src/geometry/: geometry_information.rs  plane.rs  shape.rs  sphere.rs
src/light/: area_light.rs
