[package]
name = "thruster"
version = "0.1.0"
authors = ["Emily Martins <emily.flakeheart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.32.2"
image = "0.22.0"
rand = "0.3"

[dependencies.sdl2-sys]
features = ["use_mac_framework"]
