[package]
name = "thruster"
version = "0.1.0"
authors = ["Emily Martins <emily.flakeheart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.0"
rand = "0.7.0"
scoped_threadpool = "0.1.9"

# Rendering Backend
glutin = "0.21.0"
glium = "0.25.1"

imgui = "0.1.0"
imgui-glium-renderer = "0.1.0"
imgui-winit-support = "0.1.0"

oidn = "0.2.0"

serde = "1.0.100"
serde_derive = "1.0.99"
ron = "*"
pdqselect = "0.1.0"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "rt_perf_bench"
harness = false
