[package]
name = "thruster"
version = "0.2.0"
authors = ["Emily Martins <emily.flakeheart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
rand = "0.7.0"
scoped_threadpool = "0.1.9"
rayon = "1.2.0"

# Rendering Backend
glutin = "0.21.0"
glium = "0.25.1"

# UI handling
imgui = "0.1.0"
imgui-glium-renderer = "0.2.0"
imgui-winit-support = "0.1.0"

# Denoiser tool
oidn = "0.2.0"

# Scene file handling
serde = "1.0.118"
serde_derive = "1.0.99"
ron = "*"

enumset = "0.4.4"

# For partitioning
pdqselect = "0.1.0"

# For Logging purposes
log = "0.4.8"
termion = "1.5.3"
chrono = "0.4.9"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "rt_perf_bench"
harness = false
